--- a/index.html
+++ b/index.html
@@ -3195,7 +3195,7 @@
                                                 data-widget_type="text-editor.default">
                                                 <div class="elementor-widget-container">
                                                   <div class="elementor-text-editor elementor-clearfix">
-                                                    2 rollos envueltos con
+                                                    2 enchiladas con
                                                     carnes mixtas y quesos,
                                                     salsa especial, 1 taco
                                                     crujiente, arroz, fríjoles
